# onko-legacy

./: CMakeLists.txt  a.out  license  pbiStandard.txt  pbsStandard.txt  readme.md
graphic/: onkoG.xcf
include/: background.hpp  calculations.hpp  gameData.hpp  helper.hpp  light.hpp  map.hpp  math.hpp  object.hpp  particle.hpp  player.hpp  ray.hpp  rays.hpp  text.hpp
include/dsl/: ctx.hpp  json.hpp  mutex.hpp  parser.hpp  simpleWindow.hpp
pbs/: CMakeLists.txt  bitmap.cpp  exp.cpp  license  pbsViwer.cpp
pbs/dsl/: README.md  crypto.cpp  ctx.hpp  data.hpp  parser.hpp  simpleWindow.hpp
src/: background.cpp  calculations.cpp  editor.cpp  helper.cpp  light.cpp  main.cpp  map.cpp  math.cpp  particle.cpp  player.cpp  rays.cpp  text.cpp
